syntax = "proto3";

package myservice;

option go_package = "github.com/nurmeden/grpc-service";

service MyService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
